USE CASE FAT 1 entegre edildi